# newsletter-mcp-server

./: .env.example  README.md  debug_env.py  evaluation_results.json  launch_mcp_server.py  mcp_server_wrapper.py  pyproject.toml  test_flexible_email.py  test_gdocs_init.py  test_gmail_setup.py  test_workflow_init.py
docs/: mcp_tools_documentation.md  setup.md
src/newsletter_mcp/: server.py
src/newsletter_mcp/tools/: gdocs_tool.py  gmail_tool.py  slack_tool.py
src/newsletter_mcp/workflows/: newsletter_workflow.py
tests/: test_tools.py
