[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "newsletter-mcp-server"
version = "0.1.0"
description = "MCP server for generating newsletters from Slack conversations"
authors = [
    {name = "Kenechukwu Orjiene", email = "orjienekenechukwu@gmail.com"},
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "slack-sdk>=3.27.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.2.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/newsletter_mcp"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
target-version = "py310"
